--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "firebase": "^9.2.0",
     "jquery": "^3.6.0",
@@ -27,8 +28,10 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.0",
+    "css-minimizer-webpack-plugin": "^3.1.3",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.4",
     "style-loader": "^3.3.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
